[package]
name = "rusty-sand"
version = "0.1.0"
edition = "2021"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.11.3"
error-iter = "0.4.1"
log = "0.4.21"
pixels = "0.13.0"
winit = { version = "0.30.0", features = ["rwh_05"] }
rand = "0.9.0-alpha.1"
